# ras_bt_framework

./: CMakeLists.txt  README.md  global_camera.py  package.xml
config/: mapping.json
include/gen_primitives/: Move.hpp  Pick.hpp  Place.hpp  include_all.hpp  move2pose.hpp
include/oss_bt_framework/: BtExecutor.hpp  PrimitiveBehavior.hpp
include/ras_bt_framework/: BtExecutor.hpp  BtFactory.hpp  GenerativeActionClient.hpp  PrimitiveActionClient.hpp  PrimitiveBehavior.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
oss_bt_framework/behavior_template/: instruction.py  keyword.py
oss_bt_framework/behavior_utility/: update_bt.py
oss_bt_framework/behaviors/: keywords.py  modules.py
oss_bt_framework/managers/: behavior_tree_generator.py  keywords_module_generator.py  primitive_action_manager.py
ras_bt_framework/behavior_template/: instruction.py  keyword.py  module.py  port.py
ras_bt_framework/behavior_utility/: update_bt.py  yaml_parser.py
ras_bt_framework/behaviors/: batMan.py  functions.py  keywords.py  modules.py  primitives.py
ras_bt_framework/generator/: generate_primitive.py  primitive_generator.py  test.yaml  utils.py
ras_bt_framework/generators/: behavior_tree_generator.py  keywords_module_generator.py
ras_bt_framework/managers/: BaTMan.py  behavior_tree_generator.py  experiments_service.py  generative_action_server.py  keywords_module_generator.py  primitive_action_manager.py
scripts/: FakeGripperServer.py  TrajectoryRecordsService.py  batman.py  dummy_logging_server.py  experiment_service.py  generate_primitive.py  test.py  trajzipper.py  transport_robot_service.py  transport_server_service.py
src/: BTExecutor.cpp  executor.cpp  ports_eg.cpp  test.xml  xarm_moveit2_sim_traj.cpp
src/prev/: fallback_test_server.cpp  gripper_server.cpp  log_status_server.cpp  oss_arm_bt_node.cpp  oss_bt_main.cpp  task_client_test.cpp  traj_sec_server.cpp
templates/: primitive_template.hpp.em
(+43 files in other folders)
